--- a/.htaccess
+++ b/.htaccess
@@ -2,5 +2,5 @@ RewriteEngine on
 
 RewriteCond %{REQUEST_FILENAME} !-f      
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*) index.php [NC,L]
+RewriteRule ^(.*) index.html [NC,L]
 
